Javadoc: --add-modules